Kubernetes/ingress/senhas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  namespace: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "senhas.fellipe.dev.br"
    secretName: senhas.fellipe.dev.br-tls
  rules:
    - host: senhas.fellipe.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: giropops-service
                port:
                  number: 5000
